--- a/about.qmd
+++ b/about.qmd
@@ -1,18 +1,18 @@
 ---
 title: "About"
-image: profile.jpg
+image: profile_image.jpg
 about:
-  template: jolla
+  template: trestles
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/pranjal15195gaur
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/pranjal-gaur-601707262/
+    - icon: instagram
+      text: Instagram
+      href: https://www.instagram.com/pranjal15195gaur/
 
 ---
 
